--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Aquí iria el título de la página</h1>
+    <p>Esto es un párrafo nuevo agregado desde GitHub</p>
     
 </body>
 </html>
