Agregando segundo párrafo desde VSC

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Aquí iria el título de la página</h1>
     <p>Esto es un párrafo nuevo agregado desde GitHub</p>
+    <p>Esto es un segundo párrafo añadido desde VSC</p>
     
 </body>
 </html>
