--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Empresa C</title>
+    <style href="estilos.css"></style>
 </head>
 <body>
     <h1>Aquí iria el título de la página</h1>
